  - If a playwidget() has been initialized but it can't find
    the rglwidget() that it is controlling (likely due to a 
    typo somewhere), it now throws an alert message.
    
0.100.11
  - Added check for "highp" support to fragment shader in rglwidget.
  - Added shinyGetPar3d and shinySetPar3d functions for Shiny
    interaction.
  - Updated text3d() and related functions:  dropped deprecated
    argument "justify", added "pos" and "offset" like base graphics
    text().
  - Added thigmophobe3d() function to place labels away from
    other points using plotrix::thigmophobe.
  - Fixed texture bug introduced in fix in 0.99.16.
  - The persp3d.deldir method didn't display labels properly.
  - When the X11 initialization failed, rgl messed up the S3
    methods system.  (Reported by Gregory Jefferis.)
  - Improved support of mesh3d objects:  added print methods,
    added meshColor argument to wire3d() and shade3d() to control how
    colors are interpreted, added "rgl.meshColorWarning"
    option to control warnings about these changes.
  - Added arc3d() function to draw spherical arcs
  - Added "polygon_offset" material property, to allow lines to be drawn
    on surfaces.
  - Added plot3d(), persp3d() and as.mesh3d() methods for
    "triSht" and "tri" classes (produced by interp and tripack
    packages.)
  - The plot3d.mesh3d() method now has the same default
    for "aspect" as the default method.
  - Probably due to a compiler change, rgl.bbox() was 
    returning 0/1 instead of the id of the axes.
  - pch3d() was failing in rglwidget() for some shapes.
    (Reported by Luca Scrucca.)
  - pch3d() now allows separate "color" and "bg" specifications
    for each point.  In addition, the default for the "lit"
    material property is now FALSE, so by default filled
    symbols will match the requested colour regardless of 
    lighting.
  - par3d(mouseMode = "none") was not implemented properly,
    so appeared to be a no-op.